workloads/core/cb/overlays/bergen/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: cb-peer
spec:
  ports:
  - name: "rlpx"
    port: 30303
    targetPort: 30303
  selector:
    app: validator1
  type: LoadBalancer
